fix: code block's overflow-x

--- a/src/scss/themes/_hljs-custom.scss
+++ b/src/scss/themes/_hljs-custom.scss
@@ -55,6 +55,11 @@ REF: https: //3mile.github.io/archives/2019/0826154529/
 pre>code {
     background: #f7f8f8;
     color: #aaa;
+    overflow-x: auto;
+}
+
+pre>code.codeblock {
+    overflow-x: auto;
 }
 
 // Default inline code
